Fixed loading issue and fixed styles have broken in the Forms page and Bundle page (#13)
* Fixed FWF-2207

* Fixed shaking of modal , when clicking on sort button

--- a/forms-flow-web/src/styles.scss
+++ b/forms-flow-web/src/styles.scss
@@ -824,11 +824,6 @@ div.upload input[type="file"] {
   background-color: #ffff;
 }
 
-.sort-icons {
-  display: flex;
-  flex-direction: column;
-}
-
 .sort-cell{
   display: flex;
   gap: 1rem;
